Master: updating RWD 320

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 	</div>
 	<div class="banner">
 		<div class="items">
-			<img src="imgs/banner.png" alt="Banner">
-			<div class="info">
-				<h1>Film your event with us!</h1>
-				<p>Learn how to create a responsive slideshow gallery with CSS and JavaScript.
+			<img src="imgs/banner.png" alt="Banner" class="items__photo">
+			<div class="items__info">
+				<p class="items__info_heading">Film your event with us!</p>
+				<p class="items__info_desc">Learn how to create a responsive slideshow gallery with CSS and JavaScript.
 					<br>Learn how to create a responsive slideshow gallery with CSS and JavaScript.</p>
 				<a href="">Ask for price</a>
 				<a href=""><i class="fas fa-play"></i> Watch video</a>
@@ -153,13 +153,12 @@
 <!-- END OF INFO -->
 
 <!-- START OF SIGNUP -->
-<div class="signup">
-
+<div class="signup clearfix">
 	<div class="content">
 		<img src="imgs/pic3.png">
 		
 		<form>
-			<h1>Signup for our newsletter</h1>
+			<p>Signup for our newsletter</p>
 			<input type="text" placeholder="Email address">
 			<input type="submit" value="Send">
 		</form>
