--- a/index.html
+++ b/index.html
@@ -3,168 +3,155 @@
 <head>
 	<meta charset="utf-8">
 	<title>Drone Zone</title>
-	<meta name="viewport" name="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/normalize.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/fontawesome-all.css">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/rwd.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
 <!-- START OF HEADER -->
-<header class="clearfix">
-	<div class="top container clearfix">
-		<a class="logo" href=""><span class="bold">Drone</span>Zone</a>
-		<nav>
-			<ul>
-				<li><a href="">Home</a></li>
-				<li><a href="">About</a></li>
-				<li><a href="">Pricing</a></li>
-				<li><a href="">Our drones</a></li>
-				<li><a href="">Our realizations</a></li>
-				<li><a href="">Contact</a></li>
-			</ul>
-		</nav>
-	</div>
-	<div class="banner">
-		<div class="items">
-			<img src="imgs/banner.png" alt="Banner" class="items__photo">
-			<div class="items__info">
-				<p class="items__info_heading">Film your event with us!</p>
-				<p class="items__info_desc">Learn how to create a responsive slideshow gallery with CSS and JavaScript.
-					<br>Learn how to create a responsive slideshow gallery with CSS and JavaScript.</p>
-				<a href="">Ask for price</a>
-				<a href=""><i class="fas fa-play"></i> Watch video</a>
-			</div>
+<header>
+	<div class="menu clearfix">
+		<a href="" class="menu__logo"><b>Drone</b>Zone</a>
+		<div class="menuBar" onclick="showMenuBar(this)">
+			<div class="bar1"></div>
+			<div class="bar2"></div>
+			<div class="bar3"></div>
 		</div>
-		<div class="control">
-			<a href=""><img src="imgs/scroll.png" alt="control"></a>
-			<p>scroll down</p>
+		<div class="menu__items" id="menuItems">
+			<a href="">Home</a>
+			<a href="">About</a>
+			<a href="">Pricing</a>
+			<a href="">Our drones</a>
+			<a href="">Our realizations</a>
+			<a href="">Contact</a>
 		</div>
 	</div>
 </header>
 <!-- END OF HEADER -->
 
-<!-- START OF SERVICE -->
-<div class="services">
-	<div class="row container clearfix">
-		<div class="services__item">
-			<img src="imgs/air.png" alt="service item">
-			<h3>From air</h3>
-			<p>
-				This is WebKit only, but is the cleanest way to accomplish it as the text remains editable and selectable web text
+<!-- START OF BANNER -->
+<div class="banner">
+	<div class="banner__item">
+		<img src="imgs/banner.png">
+		<div class="banner__item_info">
+			<p class="banner__item_info_title">
+				Film your event with us!
 			</p>
-		</div>
-		<div class="services__item">
-			<img src="imgs/best.png" alt="service item">
-			<h3>Best drones</h3>
-			<p>
-				This is WebKit only, but is the cleanest way to accomplish it as the text remains editable and selectable web text
+			<p class="banner__item_info_desc">
+				Facebook is shutting down the use of third-party data for ad targeting as part of its Cambridge Analytica cleanup
 			</p>
-		</div>
-		<div class="services__item">
-			<img src="imgs/speed.png" alt="service item">
-			<h3>Speed</h3>
-			<p>
-				This is WebKit only, but is the cleanest way to accomplish it as the text remains editable and selectable web text
-			</p>
-		</div>
-		<div class="services__item">
-			<img src="imgs/long.png" alt="service item">
-			<h3>Long range</h3>
-			<p>
-				This is WebKit only, but is the cleanest way to accomplish it as the text remains editable and selectable web text
-			</p>
+			<a href="" class="banner__item_info_button">Ask for price</a>
+			<a href="" class="banner__item_info_button"><i class="fas fa-play"></i> Watch video</a>
 		</div>
 	</div>
-	<div class="ask-price">
+	<div class="banner__control clearfix">
+		<img src="imgs/scroll.png" alt="scroll down">
+		<p>scroll down</p>
+	</div>
+</div>
+<!-- END OF BANNER -->
+
+<!-- START OF SERVICES -->
+<div class="services">
+	<div class="container clearfix">
+		<div class="services__item">
+			<img src="imgs/air.png" alt="services" class="services__item_photo">
+			<p class="services__item_title">From air</p>
+			<p class="services__item_desc">Learn from over 300 examples! With our editor, you can edit the CSS, and click on a button to view the result.</p>
+		</div>
+		<div class="services__item">
+			<img src="imgs/best.png" alt="services" class="services__item_photo">
+			<p class="services__item_title">From air</p>
+			<p class="services__item_desc">Learn from over 300 examples! With our editor, you can edit the CSS, and click on a button to view the result.</p>
+		</div>
+		<div class="services__item">
+			<img src="imgs/speed.png" alt="services" class="services__item_photo">
+			<p class="services__item_title">From air</p>
+			<p class="services__item_desc">Learn from over 300 examples! With our editor, you can edit the CSS, and click on a button to view the result.</p>
+		</div>
+		<div class="services__item">
+			<img src="imgs/long.png" alt="services" class="services__item_photo">
+			<p class="services__item_title">From air</p>
+			<p class="services__item_desc">Learn from over 300 examples! With our editor, you can edit the CSS, and click on a button to view the result.</p>
+		</div>
+	</div>
+	<div class="services__control">
 		<a href="">Ask for price</a>
 	</div>
 </div>
-<!-- END OF SERVICE -->
+<!-- END OF SERVICES -->
 
 <!-- START OF PRODUCT -->
-<div class="products clearfix">
-	<div class="products__info">
-		<h1><span>Nature from the air</span></h1>
-		<p>Woah! That’s awesome and thanks for the post! I can use something for my website.Woah! That’s awesome and thanks for the post! I can use something for my website.</p>
-		<div class="products__info_list">
-			<div class="products__info_list_left">
-				<div class="item">
-					<span class="bullet">1</span>
-					<p>To create a linear gradient you must define at least two color stops. </p>
+<div class="product clearfix">
+	<div class="row">
+		<div class="product__left">
+			<p class="product__left_title">
+				Nature from the air
+			</p>
+			<p class="product__left_desc">
+				CSS is a language that describes the style of an HTML document.CSS describes how HTML elements should be displayed.This tutorial will teach you CSS from basic to advanced.
+			</p>
+			<div class="product__left_fea">
+				<div class="product__left_fea_item">
+					<span>1</span>
+					<p>CSS is a language that describes the style of an HTML document.</p>
 				</div>
-				<div class="item">
-					<span class="bullet">2</span>
-					<p>To create a linear gradient you must define at least two color stops. Color stops are the colors you want to render smooth transitions among.</p>
+				<div class="product__left_fea_item">
+					<span>2</span>
+					<p>CSS is a language that describes the style of an HTML document.</p>
 				</div>
-				<div class="item">
-					<span class="bullet">3</span>
-					<p>To create a linear gradient you must define at least two color stops. Color stops are the colors you want to render smooth transitions among.</p>
+				<div class="product__left_fea_item">
+					<span>3</span>
+					<p>CSS is a language that describes the style of an HTML document.CSS describes how HTML elements should be displayed.</p>
 				</div>
-			</div>
-			<div class="products__info_list_right">
-				<div class="item">
-					<span class="bullet">4</span>
-					<p>To create a linear gradient you must define at least two color stops. </p>
+				<div class="product__left_fea_item">
+					<span>4</span>
+					<p>CSS is a language that describes the style of an HTML document.CSS describes how HTML elements should be displayed.</p>
 				</div>
-				<div class="item">
-					<span class="bullet">5</span>
-					<p>To create a linear gradient you must define at least two color stops. </p>
+				<div class="product__left_fea_item">
+					<span>5</span>
+					<p>CSS is a language that describes the style of an HTML document.CSS describes how HTML elements should be displayed.</p>
 				</div>
 			</div>
 		</div>
+		<div class="product__right">
+			<img src="imgs/drone.png" alt="drone">
+		</div>
 	</div>
-	<div class="products__photo">
-		<img src="imgs/drone.png" alt="drone">
-	</div>
+	
 </div>
 <!-- END OF PRODUCT -->
 
-<!-- START OF INFO -->
-<div class="infos clearfix">
-	<div class="infos__left">
-		<img src="imgs/pic1.png" alt="photo1">
+<!-- START OF INTRO -->
+<div class="intro clearfix">
+	<div class="intro__video">
+		<img src="imgs/pic1.png" alt="video">
 		<button><i class="fas fa-play"></i></button>
 	</div>
-	<div class="infos__right">
-		<div class="infos__right_intro">
-			<h1><span>Nature from the air</span></h1>
-			<p>Woah! That’s awesome and thanks for the post! I can use something for my website.Woah! That’s awesome and thanks for the post! I can use something for my website.</p>
-			<a href="">Ask for price</a>
-		</div>
+	<div class="intro__desc">
+		<p class="intro__desc_title">Nature from the air</p>
+		<p class="intro__desc_desc">Chania is the capital of the Chania region on the island of Crete. The city can be divided in two parts, the old town and the modern city.Chania is the capital of the Chania region on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
+		<a href>Ask for price</a>
 	</div>
 </div>
-<!-- END OF INFO -->
-
-<!-- START OF INFO -->
-<div class="infos clearfix">
-	<div class="infos__left">
-		<div class="infos__right_intro">
-			<h1><span>Nature from the air</span></h1>
-			<p>Woah! That’s awesome and thanks for the post! I can use something for my website.Woah! That’s awesome and thanks for the post! I can use something for my website.</p>
-			<a href="">Ask for price</a>
-		</div>
-	</div>
-	<div class="infos__right">
-		<img src="imgs/pic2.png" alt="photo1">
-		<button><i class="fas fa-play"></i></button>
-	</div>
-</div>
-<!-- END OF INFO -->
+<!-- END OF INTRO -->
 
 <!-- START OF SIGNUP -->
-<div class="signup clearfix">
-	<div class="content">
-		<img src="imgs/pic3.png">
-		
-		<form>
-			<p>Signup for our newsletter</p>
-			<input type="text" placeholder="Email address">
-			<input type="submit" value="Send">
-		</form>
+<div class="signup">
+	<div class="row">
+		<img src="imgs/pic3.png" alt="phot">
 	</div>
+	<form>
+		<p>Sign up for our newsletter</p>
+		<input type="text" placeholder="Email address">
+		<input type="submit" value="Send">
+	</form>
 </div>
 <!-- END OF SIGNUP -->
+
 
 <!-- START OF MAP -->
 <div class="map">
@@ -172,11 +159,19 @@
 </div>
 <!-- END OF MAP -->
 
+
 <!-- START OF FOOTER -->
 <footer>
-	<p> While using this site, you agree to have read and accepted our terms of use, cookie and privacy policy. Copyright 1999-2018 by Refsnes Data.</p>
-	<p>All Rights Reserved.Powered by <span>W3.CSS.</span></p>
+	<p>While using this site, you agree to have read and accepted our terms of use, cookie and privacy policy. Copyright 1999-2018 by Refsnes Data. All Rights Reserved.<b>Powered by W3.CSS.</b></p>
 </footer>
 <!-- END OF FOOTER -->
+<script type="text/javascript">
+function showMenuBar(x){
+	console.log(x);
+	x.classList.toggle("change");
+	var menuItems = document.getElementById("menuItems");
+	menuItems.classList.toggle("show");
+}
+</script>
 </body>
 </html>
